# RandomBallCover

./: CMakeLists.txt  CNAME  README.md  _config.yml
1.0/: 2d__plot_8cpp.html  2d__plot_8cpp__incl.map  2d__plot__nn_8cpp.html  2d__plot__nn_8cpp__incl.map  algorithms_8cpp.html  algorithms_8cpp__incl.md5  algorithms_8hpp.html  algorithms_8hpp__dep__incl.map  algorithms_8hpp__dep__incl.md5  algorithms_8hpp__incl.map  algorithms_8hpp_source.html  annotated.html  classMutex-members.html  classMutex.html  classMutex_1_1ScopedLock-members.html  classMutex_1_1ScopedLock.html  classMyFreenectDevice-members.html  classMyFreenectDevice.html  classcl__algo_1_1RBC_1_1RBCComputeDists-members.html  classcl__algo_1_1RBC_1_1RBCComputeDists.html  classcl__algo_1_1RBC_1_1RBCConstruct-members.html  classcl__algo_1_1RBC_1_1RBCConstruct.html  classcl__algo_1_1RBC_1_1RBCConstruct__coll__graph.map  classcl__algo_1_1RBC_1_1RBCConstruct__coll__graph.md5  classcl__algo_1_1RBC_1_1RBCMin-members.html  classcl__algo_1_1RBC_1_1RBCMin.html  classcl__algo_1_1RBC_1_1RBCMin__coll__graph.map  classcl__algo_1_1RBC_1_1RBCMin__coll__graph.md5  classcl__algo_1_1RBC_1_1RBCPermute-members.html  classcl__algo_1_1RBC_1_1RBCPermute.html  classcl__algo_1_1RBC_1_1RBCPermute__coll__graph.map  classcl__algo_1_1RBC_1_1RBCPermute__coll__graph.md5  classcl__algo_1_1RBC_1_1RBCSearch-members.html  classcl__algo_1_1RBC_1_1RBCSearch.html  classcl__algo_1_1RBC_1_1RBCSearch__coll__graph.map  classcl__algo_1_1RBC_1_1RBCSearch__coll__graph.md5  classcl__algo_1_1RBC_1_1Reduce-members.html  classcl__algo_1_1RBC_1_1Reduce.html  classcl__algo_1_1RBC_1_1Reduce__coll__graph.map  classcl__algo_1_1RBC_1_1Scan-members.html  (+96 more)
1.1/: 2d__plot_8cpp.html  2d__plot_8cpp__incl.md5  2d__plot__nn_8cpp.html  2d__plot__nn_8cpp__incl.md5  algorithms_8cpp.html  algorithms_8hpp.html  algorithms_8hpp_source.html  annotated.html  classMutex-members.html  classMutex.html  classMutex_1_1ScopedLock-members.html  classMutex_1_1ScopedLock.html  classMyFreenectDevice-members.html  classMyFreenectDevice.html  classcl__algo_1_1RBC_1_1RBCComputeDists-members.html  classcl__algo_1_1RBC_1_1RBCComputeDists.html  classcl__algo_1_1RBC_1_1RBCConstruct-members.html  classcl__algo_1_1RBC_1_1RBCConstruct.html  classcl__algo_1_1RBC_1_1RBCConstruct__coll__graph.map  classcl__algo_1_1RBC_1_1RBCMin-members.html  classcl__algo_1_1RBC_1_1RBCMin.html  classcl__algo_1_1RBC_1_1RBCMin__coll__graph.md5  classcl__algo_1_1RBC_1_1RBCPermute-members.html  classcl__algo_1_1RBC_1_1RBCPermute.html  classcl__algo_1_1RBC_1_1RBCPermute__coll__graph.map  classcl__algo_1_1RBC_1_1RBCSearch-members.html  classcl__algo_1_1RBC_1_1RBCSearch.html  classcl__algo_1_1RBC_1_1RBCSearch_3_01K_00_01P_00_01KernelTypeS_1_1GENERIC_01_4-members.html  classcl__algo_1_1RBC_1_1RBCSearch_3_01K_00_01P_00_01KernelTypeS_1_1GENERIC_01_4.html  classcl__algo_1_1RBC_1_1RBCSearch_3_01K_00_01P_00_01KernelTypeS_1_1GENERIC_01_4__coll__graph.md5  classcl__algo_1_1RBC_1_1RBCSearch_3_01K_00_01P_00_01KernelTypeS_1_1KINECT_01_4-members.html  classcl__algo_1_1RBC_1_1RBCSearch_3_01K_00_01P_00_01KernelTypeS_1_1KINECT_01_4.html  classcl__algo_1_1RBC_1_1RBCSearch_3_01K_00_01P_00_01KernelTypeS_1_1KINECT_01_4__coll__graph.map  classcl__algo_1_1RBC_1_1RBCSearch_3_01K_00_01P_00_01KernelTypeS_1_1KINECT_01_4__coll__graph.md5  classcl__algo_1_1RBC_1_1RBCSearch__coll__graph.map  classcl__algo_1_1RBC_1_1Reduce-members.html  classcl__algo_1_1RBC_1_1Reduce.html  classcl__algo_1_1RBC_1_1Scan-members.html  classcl__algo_1_1RBC_1_1Scan.html  classcl__algo_1_1RBC_1_1Scan__coll__graph.md5  (+69 more)
1.2.0/: 2d__plot_8cpp.html  2d__plot__nn_8cpp.html  algorithms_8cpp.html  algorithms_8hpp.html  algorithms_8hpp__dep__incl.md5  algorithms_8hpp__incl.md5  algorithms_8hpp_source.html  annotated.html  classMutex-members.html  classMutex.html  classMutex_1_1ScopedLock-members.html  classMutex_1_1ScopedLock.html  classMyFreenectDevice-members.html  classMyFreenectDevice.html  classcl__algo_1_1RBC_1_1RBCComputeDists-members.html  classcl__algo_1_1RBC_1_1RBCComputeDists.html  classcl__algo_1_1RBC_1_1RBCConstruct-members.html  classcl__algo_1_1RBC_1_1RBCConstruct.html  classcl__algo_1_1RBC_1_1RBCMin-members.html  classcl__algo_1_1RBC_1_1RBCMin.html  classcl__algo_1_1RBC_1_1RBCMin__coll__graph.map  classcl__algo_1_1RBC_1_1RBCPermute-members.html  classcl__algo_1_1RBC_1_1RBCPermute.html  classcl__algo_1_1RBC_1_1RBCSearch.html  classcl__algo_1_1RBC_1_1RBCSearch_3_01K_00_01P_00_01KernelTypeS_1_1GENERIC_01_4-members.html  classcl__algo_1_1RBC_1_1RBCSearch_3_01K_00_01P_00_01KernelTypeS_1_1GENERIC_01_4.html  classcl__algo_1_1RBC_1_1RBCSearch_3_01K_00_01P_00_01KernelTypeS_1_1GENERIC_01_4__coll__graph.map  classcl__algo_1_1RBC_1_1RBCSearch_3_01K_00_01P_00_01KernelTypeS_1_1KINECT_01_4-members.html  classcl__algo_1_1RBC_1_1RBCSearch_3_01K_00_01P_00_01KernelTypeS_1_1KINECT_01_4.html  classcl__algo_1_1RBC_1_1Reduce-members.html  classcl__algo_1_1RBC_1_1Reduce.html  classcl__algo_1_1RBC_1_1Scan-members.html  classcl__algo_1_1RBC_1_1Scan.html  classes.html  classplot-members.html  classplot.html  common_8hpp.html  common_8hpp__dep__incl.md5  common_8hpp_source.html  data__types_8hpp.html  (+61 more)
1.2.1/: 2d__plot_8cpp.html  2d__plot__nn_8cpp.html  algorithms_8cpp.html  algorithms_8cpp__incl.map  algorithms_8hpp.html  algorithms_8hpp__dep__incl.map  algorithms_8hpp_source.html  annotated.html  classMyFreenectDevice-members.html  classMyFreenectDevice.html  classcl__algo_1_1RBC_1_1RBCComputeDists-members.html  classcl__algo_1_1RBC_1_1RBCComputeDists.html  classcl__algo_1_1RBC_1_1RBCConstruct-members.html  classcl__algo_1_1RBC_1_1RBCConstruct.html  classcl__algo_1_1RBC_1_1RBCConstruct__coll__graph.md5  classcl__algo_1_1RBC_1_1RBCMin-members.html  classcl__algo_1_1RBC_1_1RBCMin.html  (+81 more)
examples/: 2d_plot.cpp  2d_plot_nn.cpp  CMakeLists.txt  img_segmentation.cpp  rgb_img_segmentation.cpp
src/: CMakeLists.txt  grub_kinect_frames.cpp  kinect_frame_grabber.cpp
src/RBC/: algorithms.cpp
src/RBC/tests/: helper_funcs.cpp
tests/: CMakeLists.txt  testsRBC.cpp  testsRBC_RGBD.cpp  testsReduce.cpp  testsScan.cpp
(+135 files in other folders)
